k8s-235/apps/pomf/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomf
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - pomf-files.tdude.co
    secretName: pomf-tdude-co-tls
  rules:
  - host: pomf-files.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pomf
            port:
              name: http
